--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="chose">
             <div class="links">
                 <a href = "inform.html">О ярмарке</a>
-                <a href= "catalog.html">Каталог товаров</a>
+                <a href="#">Каталог товаров</a>
                 <a href="#">Контакты</a>
                 <a href="#">Галерея</a>
             </div>
@@ -99,6 +99,54 @@
             </div>
         </div>
     </div> 
+    <div class = "event-cont">
+        <div class = "event-head">
+            <p> События </p> 
+        </div>
+    </div>
+
+
+    
+        <div class = "eventlist">
+            <table>
+                <tr>
+                    <td width="650"> 
+                        <div class = "events">
+                            <p> 24 декабря, 15:00 </p>
+                            <p> ИНТЕРЬЕРНЫЙ ХВОЙНЫЙ ВЕНОК С ФЛОРИСТИЧЕСКИМ ПРОЕКТОМ FRAGMENT </p>
+                            <p> Продолжительность ~2 часа. </p>
+                            <p> Стоимость 3600₽.</p>
+                            <p> Вместе в @fragment.flo соберёмся, чтобы своими руками создать интерьерный венок из разных видов хвои с добавлением минималистичного декора (шишки, игрушки, бархатные ленты). 
+                            Расслабленно проведём время и отвлечёмся от предпраздничной суеты. Венок вы заберёте в коробке, которая позволит вам сохранить его на будущее. </p>
+                        </div>
+                    </td>
+                    <td width="650"> 
+                        <div class = "events">
+                            <p> 25 декабря, 12:30 </p>
+                            <p> РУЧНАЯ ВЫШИВКА НА ОДЕЖДЕ С БРЕНДОМ KEICHAA </p>
+                            <p> Продолжительность ~ 3 часа. </p>
+                            <p> Стоимость — 2500₽.</p>
+                            <p> На мастер-классе с Екатериной @keicha.a мы украсим ваш предмет гардероба праздничной вышивкой, окунёмся в атмосферу творчества и ниточной медитации.
+            
+                                С новогодними (и не только) эскизами мы сделаем вещь для вашей новогодней вечеринки или в подарок близкому. 
+                                Вышивкой можно украсить футболку, толстовку, рубашку и любое другое изделие, которое вы захотите. </p>
+                        </div>
+                    </td>
+                    <td width="650"> 
+                        <div class = "events">
+                            <p> 25 декабря, 17:30 </p>
+                            <p> ХУДОЖЕСТВЕННАЯ РОСПИСЬ СУМКИ-ШОППЕРА </p>
+                            <p> Продолжительность ~ 2 часа. </p>
+                            <p> Стоимость — 1700₽.</p>
+                            <p> Украсьте новогоднее настроение яркими красками!
+                                На мастер-классе с молодыми художницами Алёной Рудинской и Анастасией Орловой вы погрузитесь в медитативное творчество и создадите свой маленький шедевр на сумке-шопере.
+                                Все материалы включены в стоимость.
+                                Варианты рисунков и цвета сумки предоставляются на выбор.</p>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+        </div>
 </div>
 </body>
 
