--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <div class="header">
         <div class="chose">
             <div class="links">
+                <a href = "index.html">Главная</a>
                 <a href = "inform.html">О ярмарке</a>
-                <a href="#">Каталог товаров</a>
+                <a href = "catalog.html">Каталог товаров</a>
                 <a href="#">Контакты</a>
                 <a href="#">Галерея</a>
             </div>
