--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@
                 </tr>
             </table>
         </div>
+        <div class="finish-cont">
+            <div class="finish">
+                <p>             Новогодняя ярмарка, 2022 </p>
+                <div class="socials">
+                    <img src="vk.png" alt="img" width="40" height="40">
+                    <img src="tel.png" alt="img" width="40" height="40">
+                    <img src="inst.png" alt="img" width="40" height="40">
+                </div>
+            </div>  
+        </div>
 </div>
 </body>
 
