--- a/catalog.html
+++ b/catalog.html
@@ -45,13 +45,15 @@
                 </p>
             </div>
             <div class = "frame">
-                <img src="img.jpg">
+                <img src="valencia.jpg">
                 <p>
+                    VALENCIA
                 </p>
             </div>
             <div class = "frame">
-                <img src="img.jpg">
+                <img src="blue.jpg">
                 <p>
+                    House of Blue Bear
                 </p>
             </div>
 
@@ -64,23 +66,27 @@
 
         <div class = "frames">
             <div class = "frame">
-                <img src="img.jpg">
+                <img src="ultra.jpg">
                 <p>
+                    ultra.true.love
                 </p>
             </div>
             <div class = "frame">
-                <img src="img.jpg">
+                <img src="bad.jpg">
                 <p>
+                    badmaeva
                 </p>
             </div>
             <div class = "frame">
-                <img src="img.jpg">
+                <img src="soft.jpg">
                 <p>
+                    soft
                 </p>
             </div>
             <div class = "frame">
-                <img src="img.jpg">
+                <img src="angel.jpg">
                 <p>
+                    by Angel
                 </p>
             </div>
 
@@ -93,50 +99,36 @@
 
         <div class = "frames">
             <div class = "frame">
-                <img src="img.jpg">
+                <img src="ches.jpg">
                 <p>
+                    CHESTNO.LAB
                 </p>
             </div>
             <div class = "frame">
-                <img src="img.jpg">
+                <img src="eco.jpg">
                 <p>
+                    ЭКОМЕЙК
                 </p>
             </div>
             <div class = "frame">
-                <img src="img.jpg">
+                <img src="asila.jpg">
                 <p>
+                    ASILA
                 </p>
             </div>
             <div class = "frame">
-                <img src="img.jpg">
+                <img src="innula.jpg">
                 <p>
+                    INNULA
                 </p>
             </div>
 
         <div class="members-cont">
             <div class="members">
-                <p> и конечно же, еда!
+                <p> и, конечно же, еда на вынос во всех кортах
                 </p>
             </div>
         </div>
-            
-
-        <div class = "frames">
-            <div class = "frame">
-                <img src="img.jpg">
-                <p>
-                </p>
-            </div>
-            <div class = "frame">
-                <img src="img.jpg">
-                <p>
-                </p>
-            </div>
-            <div class = "frame">
-                <img src="img.jpg">
-                <p>
-                </p>
-            </div>
 
 
         </div>
