--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
                     <a href = "index.html">Главная</a>
                     <a href = "inform.html">О ярмарке</a>
                     <a href = "catalog.html">Каталог товаров</a>
-                    <a href="#">Контакты</a>
+                    <a href = "contacts.html">Контакты</a>
                     <a href="#">Галерея</a>
                 </div>
             </div>
