--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href = "inform.html">О ярмарке</a>
                 <a href = "catalog.html">Каталог товаров</a>
                 <a href = "contacts.html">Контакты</a>
-                <a href="#">Галерея</a>
+                <a href = "resident.html">Резидентом</a>
             </div>
         </div>
     </div>
