--- a/inform.html
+++ b/inform.html
@@ -3,11 +3,85 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="styleinform.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
 <div class="composition">
-</div>
+    <div class="header">
+        <div class="chose">
+            <div class="links">
+                <a href = "index.html">Главная</a>
+                <a href = "inform.html">О ярмарке</a>
+                <a href = "catalog.html">Каталог товаров</a>
+                <a href = "contacts.html">Контакты</a>
+                <a href="#">Галерея</a>
+            </div>
+        </div>
+    </div>
+    <div class="maintext-cont">
+        <div class="maintext">
+            <p> О ярмарке </p>
+        </div>
+    </div>
+    <div class = "descr-cont" >
+        <div class = "descr">
+            <table class = "descr-table">
+                <tr>
+                    <td width="650"> 
+                        <div class = "de">
+                            <img src="5.jpg" alt="img" width="450" height="550">
+                        </div>
+                    </td>
+                    <td width="800"> 
+                        <div class = "de">
+                            <p> Новогодняя ярмарка - это место, где вы можете купить подарки родным и близким. Мы предлагаем широкий ассортимент товаров, 
+                                где каждый найдет что-то подходящее. На нашей ярмарке вы можете купить одежду и украшения, товары для дома и косметику, а на фудкорте ярмарки представлена кухня разных стран. 
+                                Наши резиденты были тщательно отобраны и проверены командой новогодней ярмарки.
+                            </p>
+                            <p>
+                                В течении двух дней вы сможете посетить нашу ярмарку и поучаствовать в мастерклассах. Мастерклассы проводятся наши резиденты, которые с удовольствием поделятся своими знаниями и опытом.
+                                Впечатления от ярмарки останутся навсегда, а подарки, которые вы купите, будут напоминать о ярмарке в течении всего года. Приходите к нам, мы ждем вас! 
+                            </p>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+
+            <table class = "descr-table2">
+                <tr>
+                    <td width="800"> 
+                        <div class = "de">
+                            <p> Наша команда устраивает ярмарку уже третий год. Команда, которая состоит из организаторов, волонтеров, фотографов и журналистов 
+                                Мы - группа молодых людей, которые любят свою работу и делают ее с удовольствием. Каждый год мы находим новых спонсоров. 
+                                В этом году мы решили сделать ее еще больше и интереснее. Вас ждут мастерклассы, фудкорт, конкурсы и многое другое.
+                            </p>
+                        </div>
+                    </td>
+                    <td width="650"> 
+                        <div class = "de">
+                            <img src="team.jpg" alt="img" width="600" >
+                        </div>
+                    </td>
+                </tr>
+            </table>
+            
+        </div>
+        
+    </div>
+    <div class="finish-cont">
+        <div class="finish">
+            <p>             Новогодняя ярмарка, 2022 </p>
+            <div class="socials">
+                <img src="vk.png" alt="img" width="40" height="40">
+                <img src="tel.png" alt="img" width="40" height="40">
+                <img src="inst.png" alt="img" width="40" height="40">
+            </div>
+        </div>  
+    </div>
+</div>  
 </body>
 
 </html>
