--- a/contacts.html
+++ b/contacts.html
@@ -58,7 +58,16 @@
                 Мы работаем с 10:00 до 20:00, и будем рады видеть вас каждый день, кроме понедельника.
             </p>
         </div>
-
+        <div class="finish-cont">
+            <div class="finish">
+                <p>             Новогодняя ярмарка, 2022 </p>
+                <div class="socials">
+                    <img src="vk.png" alt="img" width="40" height="40">
+                    <img src="tel.png" alt="img" width="40" height="40">
+                    <img src="inst.png" alt="img" width="40" height="40">
+                </div>
+            </div>  
+        </div>
     </div>
 </body>
 </html>
